Use correct link for api howto

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
       the coolest project yet is <strong class="text-warning">WeatherMeme</strong>
       . It started out as an Android app I made at a hackathon that
       showed the user a meme relevant to the current weather conditions.
-      Since then, I've developed an <a href="http://andrewbevelhymer.com/weathermeme/api">
+      Since then, I've developed an <a href="http://andrewbevelhymer.com/weathermeme/api_howto">
       API</a> so that I can create <strong class="text-warning">WeatherMeme</strong>
       apps on various platforms by implementing this API.
       You can check out a <strong class="text-danger">very barebones</strong>
