Add square escape game

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
             <ul class="dropdown-menu">
               <li><a href="https://github.com/andrewbeav/Tic-Tac-Toe"></a></li>
               <li><a href="https://andrewbeav.github.io/second_degree_equation_solver">Quadratic Equation Solver</a></li>
-              <li><a href="#">Square Escape (Simple Game)</a></li>
+              <li><a href="http://andrewbevelhymer.com/square_escape">Square Escape (Simple Game)</a></li>
             </ul>
           </li>
         </ul>
