Add implemenation of weathermeme to info page

--- a/public/weathermeme/index.html
+++ b/public/weathermeme/index.html
@@ -83,9 +83,18 @@
       </div>
     </div>
 
+    <hr>
+
+    <div class="jumbotron text-center">
+        <img id="meme"src="placeholder_image.jpg" alt="Meme">
+        <h2 id="locationLabel">Location</h2>
+        <button id="memeGenBtn" class="btn btn-primary">Generate Meme</button>
+    </div>
+
   </div>
 
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/weathermeme.js"></script>
 </body>
 </html>
