--- a/public/weathermeme/index.html
+++ b/public/weathermeme/index.html
@@ -18,7 +18,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Andrew Bevelhymer</a>
+        <a class="navbar-brand" href="http://andrewbevelhymer.com">Andrew Bevelhymer</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
