Modify home page content

--- a/public/index.html
+++ b/public/index.html
@@ -77,15 +77,15 @@
       <div class="panel-body">
         I've done several projects, most of which can be found on my
       <a href="https://github.com/andrewbeav">Github</a>. By far,
-      the coolest project yet is <strong class="text-warning">WeatherMeme</strong>
+      the coolest project yet is WeatherMeme
       . It started out as an Android app I made at a hackathon that
       showed the user a meme relevant to the current weather conditions.
       Since then, I've developed an <a href="http://andrewbevelhymer.com/weathermeme/api_howto">
-      API</a> so that I can create <strong class="text-warning">WeatherMeme</strong>
+      API</a> so that I can create WeatherMeme
       apps on various platforms by implementing this API.
-      You can check out a <strong class="text-danger">very barebones</strong>
-      implementation <a href="http://andrewbevelhymer.com/weathermeme">
-      here.</a> You can also check out the <a href="https://github.com/andrewbeav/WeatherMeme">
+      You can check out a very barebones
+      implementation and learning more by visiting <a href="http://andrewbevelhymer.com/weathermeme">
+      this page.</a> You can also check out the <a href="https://github.com/andrewbeav/WeatherMeme">
       github page</a> for the original Android app.
       </div>
     </div>
@@ -102,7 +102,8 @@
         <div class="well well-lg">
           Other than programming and studying for school, I spend most
           of my free time playing around with Linux. I currently (and for the
-          foreseeable future) use <a href="https://www.archlinux.org/">Arch Linux.</a>
+          foreseeable future) use <a href="https://www.archlinux.org/">Arch Linux</a>
+          and <a href="https://solus-project.com/">Solus.</a>
           There is nothing better than having a system that's completely
           your own, and linux lets you do just that. Other than that, I like
           to watch movies and spend time with my girlfriend, Shelby.
@@ -162,15 +163,12 @@
 
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h3>Goals</h3>
+        <h3>Career Goals</h3>
       </div>
       <div class="panel-body">
-        I'm still not sure what exactly it is that I want to do when
-        I get my degree, but I know for sure I want to do some type of software
-        development. Right now, I'm kind of leaning towards backend web development,
-        as that seems to be an interesting and demanding field. However, I'm not opposed
-        to doing something else in software development. As long as I get to program
-        things that are challenging and important I will be happy where ever I am.
+        Right now, I'm still not extremely sure what exactly I want to do, but I know it's
+        something in software development. I'm really interested in learning more about
+        data science and machine learning.
       </div>
     </div>
   </div>
